--- a/style.css
+++ b/style.css
@@ -160,7 +160,7 @@ body{
     display: none;
     position: absolute;
     width: 336px;
-    height: 650px;
+    height: 800px;
     left: 1132px;
     top: 72px;
   
@@ -174,4 +174,19 @@ body{
     border-radius: 32px;
     padding: 15px;
     resize: none;
+  }
+
+  #copiar{
+    position: absolute;
+    left:1150px;
+    bottom: 100px;
+    padding: 24px;
+    width: 300px;
+    height: 67px;
+    background: #ffffff;
+    border-radius: 24px;
+    color: #0A3871;
+    border: 1px solid #0A3871;
+    border-radius: 24px;
+    display: none;
   }
